--- a/roles/mssql/tasks/main.yml
+++ b/roles/mssql/tasks/main.yml
@@ -18,7 +18,7 @@
   environment: 
     ACCEPT_EULA: "Y"
     MSSQL_PID: Developer
-    MSSQL_SA_PASSWORD: "!99Redbal00ns"
+    MSSQL_SA_PASSWORD: "HardPass2017!"
     MSSQL_TCP_PORT: 1433
 
 - name: Add tools key 
@@ -44,6 +44,12 @@
   environment: 
     ACCEPT_EULA: "Y"
     DEBIAN_FRONTEND: "noninteractive"
+
+- name: export path variables 
+  shell: echo export PATH="$PATH:/opt/mssql-tools/bin" >> /etc/profile 
+
+- name: export .bashrc path 
+  shell: echo export PATH="$PATH:/opt/mssql-tools/bin" >> /etc/profile 
 
   
 
