--- a/roles/mssql/tasks/main.yml
+++ b/roles/mssql/tasks/main.yml
@@ -21,7 +21,7 @@
     MSSQL_SA_PASSWORD: "HardPass2017!"
     MSSQL_TCP_PORT: 1433
 
-- name: Add tools key 
+- name: Add tools keys
   apt_key: 
     url: "https://packages.microsoft.com/keys/microsoft.asc"
     state: present 
