--- a/roles/mssql-tools/tasks/main.yml
+++ b/roles/mssql-tools/tasks/main.yml
@@ -1,1 +1,30 @@
 ---
+- name: Add tools keys
+  apt_key: 
+    url: "https://packages.microsoft.com/keys/microsoft.asc"
+    state: present 
+
+- name: add tools repo 
+  apt_repository: 
+    repo: deb [arch=amd64] https://packages.microsoft.com/ubuntu/16.04/prod xenial main
+    update_cache: yes
+
+- name: install mssql-tools
+  apt: 
+    package: "{{item}}"  
+    state: installed
+    update_cache: yes
+    force: yes 
+    install_recommends: yes    
+  with_items: 
+    - mssql-tools 
+    - unixodbc-dev
+  environment: 
+    ACCEPT_EULA: "Y"
+    DEBIAN_FRONTEND: "noninteractive"
+
+- name: export path variables 
+  shell: echo export PATH="$PATH:/opt/mssql-tools/bin" >> /etc/profile 
+
+- name: export .bashrc path 
+  shell: echo export PATH="$PATH:/opt/mssql-tools/bin" >> /etc/profile 
