added install for agent/fulltext

--- a/playbook.yml
+++ b/playbook.yml
@@ -6,6 +6,9 @@
     - ntp
     - mssql
     - mssql-tools
+    - mssql-agent
+    - mssql-fulltext
+    - mssql-ssis
   tasks: 
     - name: Set Hostname 
       hostname: 
