--- a/roles/mssql-ssis/tasks/main.yml
+++ b/roles/mssql-ssis/tasks/main.yml
@@ -1,1 +1,23 @@
 ---
+- name: add repo key 
+  apt_key: 
+    url: https://packages.microsoft.com/keys/microsoft.asc
+    state: present
+
+- name: add repository  
+  apt_repository: 
+    repo: deb [arch=amd64] https://packages.microsoft.com/ubuntu/16.04/mssql-server xenial main
+
+- name: installing SSIS
+  apt:
+    package: mssql-server-is
+    update_cache: yes
+
+- name: Configure ssis-conf setup
+  command: /opt/ssis/bin/ssis-conf setup
+  environment: 
+    ACCEPT_EULA: "Y"
+    MSSQL_PID: Developer
+
+- name: export path variables 
+  shell: export PATH=/opt/ssis/bin:$PATH >> /etc/profile
